# python-ezfrida

./: MANIFEST.in  README.md  setup.cfg
ezfrida/: __init__.py  logging.py
ezfrida/res/javascript/general/: string-catch  string-compare
