[metadata]
name = ezfrida
version = 0.0.1a
author = Khas Mek
summary = An easier (maybe?) way to perform multiple actions in Frida at the same time.

[options]
packages = ezfrida
include_package_data = True
install_requires =
    colorama

[options.entry_points]
console_scripts =
    ezfrida = ezfrida:main
    ezf = ezfrida:main
